--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,10 @@ runtime: python27
 api_version: 1
 threadsafe: true
 
+libraries:
+- name: jinja2
+  version: latest
+
 handlers:
 - url: /.*
   script: main.app
