--- a/app.yaml
+++ b/app.yaml
@@ -7,5 +7,14 @@ libraries:
   version: latest
 
 handlers:
+- url: /css/
+  static_dir: css/
+  expiration: "1m"
+- url: /img/
+  static_dir: img/
+  expiration: "1m"
+- url: /start.*
+  script: main.app
+  login: required
 - url: /.*
   script: main.app
