add history data

--- a/app.yaml
+++ b/app.yaml
@@ -19,5 +19,8 @@ handlers:
 - url: /start.*
   script: main.app
   login: required
+- url: /history.*
+  script: main.app
+  login: required
 - url: /.*
   script: main.app
