--- a/app.yaml
+++ b/app.yaml
@@ -3,32 +3,34 @@ api_version: 1
 threadsafe: true
 
 libraries:
-- name: jinja2
-  version: latest
+  - name: jinja2
+    version: latest
+  - name: ssl
+    version: latest
 
 handlers:
-- url: /css/
-  static_dir: css/
-  expiration: "1m"
-- url: /img/
-  static_dir: img/
-  expiration: "1m"
-- url: /js/
-  static_dir: js/
-  expiration: "1m"
-- url: /favicon.ico
-  static_files: favicon.ico
-  upload: favicon.ico
-  mime_type: image/x-icon
-- url: /start.*
-  script: main.app
-  login: required
-- url: /history.*
-  script: main.app
-  login: required
-- url: /.*
-  script: main.app
-  secure: always
+  - url: /css/
+    static_dir: css/
+    expiration: "1m"
+  - url: /img/
+    static_dir: img/
+    expiration: "1m"
+  - url: /js/
+    static_dir: js/
+    expiration: "1m"
+  - url: /favicon.ico
+    static_files: favicon.ico
+    upload: favicon.ico
+    mime_type: image/x-icon
+  - url: /start.*
+    script: main.app
+    login: required
+  - url: /history.*
+    script: main.app
+    login: required
+  - url: /.*
+    script: main.app
+    secure: always
 
 skip_files: |
   ^(.*/)?(
